--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vue": "^2.2.0",
     "astro": "^2.5.5",
     "daisyui": "^2.51.6",
-    "tailwindcss": "^3.3.2"
+    "dayjs": "^1.11.7",
+    "tailwindcss": "^3.3.2",
+    "vue": "^3.3.4"
   }
 }
