--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/vue": "^2.2.0",
     "astro": "^2.5.5",
-    "daisyui": "^2.51.6",
     "dayjs": "^1.11.7",
     "tailwindcss": "^3.3.2",
     "vue": "^3.3.4"
+  },
+  "devDependencies": {
+    "daisyui": "^3.0.3"
   }
 }
