--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.0.6",
     "dayjs": "^1.11.7",
     "tailwindcss": "^3.3.2",
+    "theme-change": "^2.5.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
